# mathbench-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  after-success.sh
.github/workflows/: ci.yml
benches/: eulerbench.rs  mat2bench.rs  mat3bench.rs  mat4bench.rs  matrix2.rs  matrix3.rs  matrix4.rs  quatbench.rs  quaternion.rs  ray_sphere_intersect.rs  rotation3.rs  transform.rs  transform2d.rs  transform3d.rs  transformations.rs  vecbench.rs  vector3.rs
benches/support/: macros.rs  mod.rs
buildtime/cgmath/: Cargo.toml
buildtime/euclid/: Cargo.toml
buildtime/glam/: Cargo.toml
buildtime/nalgebra/: Cargo.toml
buildtime/pathfinder_geometry/: Cargo.toml
buildtime/vek/: Cargo.toml
scripts/: summary.py
src/: lib.rs  main.rs
tests/: mat.rs  quat.rs  vec.rs
tests/support/: macros.rs  mod.rs
tools/buildbench/: Cargo.toml
tools/buildbench/src/: main.rs
tools/summarize/: Cargo.toml
