[package]
name = "mathbench"
version = "0.3.2"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[features]
# defaults can be disabled for benchmarks but are required for tests
default = ["cgmath", "nalgebra"]

[dependencies]
mint = "0.5.5"
rand = "0.7.2"
rand_pcg = "0.2.1"

[dependencies.glam]
version = "0.9.4"
features = ["mint", "rand", "debug-glam-assert"]
# a lot of random data generation uses glam, so can't be optional yet
# optional = true

[dependencies.nalgebra]
version = "0.22.0"
features = ["mint"]
optional = true

[dependencies.cgmath]
version = "0.17.0"
features = ["mint"]
optional = true

[dependencies.euclid]
version = "0.22.1"
optional = true

[dependencies.vek]
version = "0.12.0"
features = ["mint"]
optional = true

[dependencies.pathfinder_geometry]
version = "0.5.1"
optional = true

[dependencies.static-math]
version = "0.1.7"
optional = true

# Note tha ultraviolet is inlucded here for build timings only
# I want to add benchmarks for SoA types before fully supporting ultraviolet.
[dependencies.ultraviolet]
version = "0.5.1"
optional = true

[dev-dependencies]
criterion = "0.3.3"

# [patch.crates-io]
# glam = { path = "../glam-rs" }

[lib]
bench = false

[[bench]]
name = "eulerbench"
harness = false

[[bench]]
name = "rotation3"
harness = false

[[bench]]
name = "matrix2"
harness = false

[[bench]]
name = "matrix3"
harness = false

[[bench]]
name = "matrix4"
harness = false

[[bench]]
name = "transform2d"
harness = false

[[bench]]
name = "transform3d"
harness = false

[[bench]]
name = "transformations"
harness = false

[[bench]]
name = "vector3"
harness = false

[profile.bench]
debug = true
# codegen-units = 1
# lto = true

[workspace]
members = ["tools/summarize", "tools/buildbench"]
