[package]
name = "mathbench"
version = "0.4.1"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[features]
# defaults can be disabled for benchmarks but are required for tests
default = ["cgmath", "nalgebra", "ultraviolet"]

# fake glam target for wide comparisons
glam_f32x1 = []

ultraviolet_f32x4 = ["ultraviolet", "wide_mathbench"]
ultraviolet_f32x8 = ["ultraviolet", "wide_mathbench"]
ultraviolet_wide = ["ultraviolet_f32x4", "ultraviolet_f32x8"]

# nalgebra wide types require a nightly compiler
nalgebra_f32x4 = ["nalgebra", "simba"]
nalgebra_f32x8 = ["nalgebra", "simba"]
nalgebra_wide = ["nalgebra_f32x4", "nalgebra_f32x8"]

scalar = ["cgmath", "nalgebra", "ultraviolet", "euclid", "vek", "pathfinder_geometry", "static-math"]

# nalgebra_wide fails to build due to packed_simd errors
# wide = ["glam_f32x1", "ultraviolet_wide", "nalgebra_wide"]
wide = ["glam_f32x1", "ultraviolet_wide"]

all = ["scalar", "wide"]

# enable unstable features
unstable = []

[dependencies]
mint = "0.5.9"
rand = "0.8.5"
rand_pcg = "0.3.1"

[dependencies.glam]
version = "0.21.3"
features = ["mint", "rand"]
# a lot of random data generation uses glam, so can't be optional yet
# optional = true

[dependencies.nalgebra]
version = "0.31.1"
features = ["mint"]
optional = true

[dependencies.simba]
version = "0.7.2"
features = ["packed_simd"]
optional = true

[dependencies.cgmath]
version = "0.18.0"
features = ["mint"]
optional = true

[dependencies.euclid]
version = "0.22.7"
optional = true

[dependencies.vek]
version = "0.15.8"
features = ["mint"]
optional = true

[dependencies.pathfinder_geometry]
version = "0.5.1"
optional = true

[dependencies.static-math]
version = "0.2.3"
optional = true

[dependencies.ultraviolet]
version = "0.9.0"
features = ["mint"]
optional = true

[dependencies.wide_mathbench]
package = "wide"
version = "0.7.4"
optional = true

[dev-dependencies]
criterion = "0.4.0"

# [patch.crates-io]
# glam = { path = "../glam-rs" }

[lib]
bench = false

[[bench]]
name = "eulerbench"
harness = false

[[bench]]
name = "ray_sphere_intersect"
harness = false

[[bench]]
name = "rotation3"
harness = false

[[bench]]
name = "matrix2"
harness = false

[[bench]]
name = "matrix3"
harness = false

[[bench]]
name = "matrix4"
harness = false

[[bench]]
name = "transform2d"
harness = false

[[bench]]
name = "transform3d"
harness = false

[[bench]]
name = "transformations"
harness = false

[[bench]]
name = "vector3"
harness = false

[profile.bench]
# codegen-units = 1
# lto = true

[workspace]
members = ["tools/summarize", "tools/buildbench"]
