[package]
name = "buildbench"
version = "0.1.0"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[dependencies]
cargo_toml = "0.8"
clap = { version = "2.33", default-features = false }
lazy_static = "1.4"
prettytable-rs = { version = "0.8", default-features = false }
regex = "1.3"
tempfile = "3.1"
