[package]
name = "buildbench"
version = "0.1.0"
authors = ["Cameron Hart <cameron.hart@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_toml = "0.14"
clap = { version = "3", default-features = false }
lazy_static = "1.4"
prettytable-rs = { version = "0.10", default-features = false }
regex = "1.3"
tempfile = "3.1"
